Hamlib -- History of visible changes.

Copyright (C) 2000-2003  Frank Singleton
Copyright (C) 2000-2021  Stephane Fillod, and others
Copyright (C) 2000-2021  Michael Black W9MDB, and others

Please send Hamlib bug reports to hamlib-developer@lists.sourceforge.net

Version 4.2
    * 2021-04-27
    * New rig_get_info  -- returns token set for all vfos where order does not matter 
      This is a string return to allow for easy future expansion without changing the API
      New tokens may be introduced and can be skipped if not used by clients
        Rig command: \get_rig_info
        VFO=Main Freq=145000000 Mode=None Width=0 RX=1 TX=1
        VFO=VFOB Freq=145000000 Mode=FM Width=15000 RX=0 TX=0
        Split=0 SatMode=0
        Rig=Dummy
        App=Hamlib
        Version=20210429
        CRC=0xf49f4708
    * New rig_get_vfo_info
        Rig command: \get_vfo_info VFOA
        Freq: 145000000
        Mode: None
        Width: 0
        Split: 0
        SatMode: 0

    * FILPATHLEN has changed to HAMLIB_FILPATHLEN

    * USRP lib and gnuradio are deprecated and will be removed in 5.0
    * Added Radan rotator
    * Added Malachite SDR 
    * Major rework for PRM80
    * Add twiddle_timeout and twiddle_rit --set-conf options
        rigctld --set-conf=twiddle_timeout=5,twiddle_rit=1 
        This will set the twiddle timeout to 5 seconds and turn on twiddle_rit
        For twiddle timeout VFOB will not be polled for 5 seconds after VFO twiddling is detected
    rigctld --twiddle is deprecated and will be removed in 5.0 along with get_twiddle and set_twiddle

Version 4.1
        2021-01-31
        * rigctld and rigs should be more robust for disconnect problems
        * Several fixes for Icom and Yaesu rigs
        * Nobody should need to use rig->caps or rig->state anymore
             If you need a variable added please contact us.
             Note that rig->state abstraction is not implemented yet...no need known