@@ -8,6 +8,12 @@ Please send Hamlib bug reports to hamlib-developer@lists.sourceforge.net
 
 Version 4.2
     * 2021-04-27
+    * New rig_get_mode_bandwidths -- returns token set for bandwidths for given mode
+        Rig command: \get_mode_bandwidths CW
+        Mode=CW
+        Normal=500Hz
+        Narrow=50Hz
+        Wide=2400Hz
     * New rig_get_info  -- returns token set for all vfos where order does not matter 
       This is a string return to allow for easy future expansion without changing the API
       New tokens may be introduced and can be skipped if not used by clients
